codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_fallback_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "sectioned_request_shapes(&[(\"Compaction Request (Including Incoming Attempt)\",\n&requests[1]),\n(\"Compaction Request (Fallback Excluding Incoming)\", &requests[2]),\n(\"Post-Compaction History Request\", &requests[3]),])"
---
## Compaction Request (Including Incoming Attempt)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:FALLBACK_USER_ONE
04:message/assistant:FIRST_REPLY
05:message/user:FALLBACK_USER_TWO
06:message/user:<SUMMARIZATION_PROMPT>

## Compaction Request (Fallback Excluding Incoming)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:FALLBACK_USER_ONE
04:message/assistant:FIRST_REPLY
05:message/user:<SUMMARIZATION_PROMPT>

## Post-Compaction History Request
00:message/user:FALLBACK_USER_ONE
01:message/user:<SUMMARY:FALLBACK_SUMMARY>
02:message/developer:<PERMISSIONS_INSTRUCTIONS>
03:message/user:<AGENTS_MD>
04:message/user:<ENVIRONMENT_CONTEXT>
05:message/user:FALLBACK_USER_TWO
