codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_including_incoming_follow_up_shape.snap
---
source: core/tests/suite/compact.rs
expression: follow_up_shape
---
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:PRE_TURN_USER_ONE
04:message/user:PRE_TURN_USER_TWO
05:message/user:PRE_TURN_USER_THREE
06:message/user:<SUMMARY:PRE_TURN_SUMMARY>
