codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_including_incoming_request_shape.snap
---
source: core/tests/suite/compact.rs
expression: compact_shape
---
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:PRE_TURN_USER_ONE
04:message/assistant:FIRST_REPLY
05:message/user:PRE_TURN_USER_TWO
06:message/assistant:SECOND_REPLY
07:message/user:PRE_TURN_USER_THREE
08:message/user:<SUMMARIZATION_PROMPT>
